Added 32 bit linked list functions

--- a/docs/latex/decode__helpers_8h.tex
+++ b/docs/latex/decode__helpers_8h.tex
@@ -99,8 +99,7 @@ this function gets a variable encoded 64 bit integer from a 7 byte encoded strin
 \begin{DoxyReturn}{Returns}
 The number of bytes used to encode the extracted varint 
 \end{DoxyReturn}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
