--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -182,9 +182,12 @@
 \chapter{Data Structure Documentation}
 \input{structbgp__ipv4__prefix}
 \input{structproto__msg}
+\input{structroute4tree}
 \chapter{File Documentation}
 \input{decode__helpers_8c}
 \input{decode__helpers_8h}
+\input{linked__list_8c}
+\input{linked__list_8h}
 \input{README_8md}
 %--- End generated contents ---
 
