--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -2,4 +2,5 @@
 Here are the data structures with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{structbgp__ipv4__prefix}{bgp\+\_\+ipv4\+\_\+prefix}} }{\pageref{structbgp__ipv4__prefix}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structproto__msg}{proto\+\_\+msg}} }{\pageref{structproto__msg}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structroute4tree}{route4tree}} \\*The route4trie structure is used in the creation of a 32 bit binary tree }{\pageref{structroute4tree}}{}
 \end{DoxyCompactList}
