--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -2,4 +2,6 @@
 Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{decode__helpers_8c}{decode\+\_\+helpers.\+c}} }{\pageref{decode__helpers_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{decode__helpers_8h}{decode\+\_\+helpers.\+h}} }{\pageref{decode__helpers_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{linked__list_8c}{linked\+\_\+list.\+c}} }{\pageref{linked__list_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{linked__list_8h}{linked\+\_\+list.\+h}} }{\pageref{linked__list_8h}}{}
 \end{DoxyCompactList}
