--- a/docs/latex/structroute4tree.tex
+++ b/docs/latex/structroute4tree.tex
@@ -11,8 +11,7 @@ The route4trie structure is used in the creation of a 32 bit binary tree.
 
 
 
-Collaboration diagram for route4tree\+:
-\nopagebreak
+Collaboration diagram for route4tree\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
