--- a/docs/latex/linked__list_8c.tex
+++ b/docs/latex/linked__list_8c.tex
@@ -3,8 +3,7 @@
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include $<$asm-\/generic/types.\+h$>$}\newline
 {\ttfamily \#include \char`\"{}linked\+\_\+list.\+h\char`\"{}}\newline
-Include dependency graph for linked\+\_\+list.\+c\+:
-\nopagebreak
+Include dependency graph for linked\+\_\+list.\+c\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -14,6 +13,8 @@ Include dependency graph for linked\+\_\+list.\+c\+:
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
+struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{linked__list_8c_a8039c47f44e43b60d48281b765e115dd}{init\+\_\+tree4}} (void)
+\begin{DoxyCompactList}\small\item\em Initialize a binary tree head entry. \end{DoxyCompactList}\item 
 struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{linked__list_8c_a8d4559d6f415d3d1c357f6242ce3c8db}{insert\+\_\+tree4}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 addr, \+\_\+\+\_\+u8 cidr, void $\ast$data)
 \item 
 struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{linked__list_8c_afbb768f4a8298bf1c98458904170e83c}{lookup\+\_\+lpm}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 addr, \+\_\+\+\_\+u8 cidr)
@@ -25,6 +26,19 @@ void \mbox{\hyperlink{linked__list_8c_adcb6ddddd0010e932c2c8d7057cb6444}{remove\
 
 
 \doxysubsection{Function Documentation}
+\mbox{\Hypertarget{linked__list_8c_a8039c47f44e43b60d48281b765e115dd}\label{linked__list_8c_a8039c47f44e43b60d48281b765e115dd}} 
+\index{linked\_list.c@{linked\_list.c}!init\_tree4@{init\_tree4}}
+\index{init\_tree4@{init\_tree4}!linked\_list.c@{linked\_list.c}}
+\doxysubsubsection{\texorpdfstring{init\_tree4()}{init\_tree4()}}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structroute4tree}{route4tree}}$\ast$ init\+\_\+tree4 (\begin{DoxyParamCaption}\item[{void}]{ }\end{DoxyParamCaption})}
+
+
+
+Initialize a binary tree head entry. 
+
+\begin{DoxyReturn}{Returns}
+A pointer to the head of a binary tree 
+\end{DoxyReturn}
 \mbox{\Hypertarget{linked__list_8c_a8d4559d6f415d3d1c357f6242ce3c8db}\label{linked__list_8c_a8d4559d6f415d3d1c357f6242ce3c8db}} 
 \index{linked\_list.c@{linked\_list.c}!insert\_tree4@{insert\_tree4}}
 \index{insert\_tree4@{insert\_tree4}!linked\_list.c@{linked\_list.c}}
