--- a/docs/latex/decode__helpers_8h.tex
+++ b/docs/latex/decode__helpers_8h.tex
@@ -28,11 +28,11 @@ struct \mbox{\hyperlink{structproto__msg}{proto\+\_\+msg}}
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{decode__helpers_8h_a9df7d5bf99061b8754aad86196f71cde}{dump\+\_\+buffer}} (void $\ast$buffer, \+\_\+\+\_\+u16 size)
-\begin{DoxyCompactList}\small\item\em dump\+\_\+buffer takes a pointer and dumps a specific number of bytes @detail This function dumps memory in a format that is importable by wireshark or other programs that can import hex dumps \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em dump\+\_\+buffer takes a pointer and dumps a specific number of bytes \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{decode__helpers_8h_a298daf8160cdf855a5ae27d4fb55b405}{reverse\+\_\+array\+\_\+10}} (\+\_\+\+\_\+u8 bytes\mbox{[}$\,$\mbox{]})
-\begin{DoxyCompactList}\small\item\em This function reverses a 10 byte array @detail This function is used primarily for handling variable integer decodes VARINT\textquotesingle{}s are something used heavily in gbp file formats (Google protobuffers) NOTE\+: This function assumes that the input array is at least 10 bytes long and should the input array be less than 10 bytes this may cause unexpected behavior. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em This function reverses a 10 byte array. \end{DoxyCompactList}\item 
 struct \mbox{\hyperlink{structproto__msg}{proto\+\_\+msg}} $\ast$ \mbox{\hyperlink{decode__helpers_8h_a224ae6354763d1d7e15122ecbe5985e0}{mem\+\_\+to\+\_\+msg}} (const \+\_\+\+\_\+u8 $\ast$ptr)
-\begin{DoxyCompactList}\small\item\em This function is used to decode protobuf messages and message types @detail This function reads a maximum of 10 bytes of memory into an array, terminating when one byte does not have its high order bit set. It then reverses the array, and concatenates the byte array into a single 64 bit integer, using only the low order 7 bits of each byte in the array. The result is then shifted right by 3 to produce the message code and AND\textquotesingle{}d by 7 to get the high order bytes to find the message type NOTE\+: It is important that this function returns allocated memory, and the result must be free\textquotesingle{}d by the calling function to avoid memory leaks. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em This function is used to decode protobuf messages and message types. \end{DoxyCompactList}\item 
 struct \mbox{\hyperlink{structbgp__ipv4__prefix}{bgp\+\_\+ipv4\+\_\+prefix}} $\ast$ \mbox{\hyperlink{decode__helpers_8h_a3edfbd2b78d141f355c240b7b1f52e18}{read\+\_\+bgp\+\_\+prefix}} (\+\_\+\+\_\+u8 $\ast$ptr)
 \begin{DoxyCompactList}\small\item\em Reads a BGP encoded prefix from an NLRI or withdraw message. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{decode__helpers_8h_a0342ce388a9816dfda3296af947325d2}{free\+\_\+mem\+\_\+to\+\_\+msg}} (struct \mbox{\hyperlink{structproto__msg}{proto\+\_\+msg}} $\ast$$\ast$msg)
@@ -52,9 +52,9 @@ void \mbox{\hyperlink{decode__helpers_8h_ae4726b692329de152e1e658be0d2afee}{free
 
 
 
-dump\+\_\+buffer takes a pointer and dumps a specific number of bytes @detail This function dumps memory in a format that is importable by wireshark or other programs that can import hex dumps 
+dump\+\_\+buffer takes a pointer and dumps a specific number of bytes 
 
-
+This function dumps memory in a format that is importable by wireshark or other programs that can import hex dumps 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em buffer} & A pointer to the memory to be dumped \\
 \hline
@@ -71,7 +71,7 @@ dump\+\_\+buffer takes a pointer and dumps a specific number of bytes @detail Th
 
 Frees the Pointer returned by a previous successful call to read\+\_\+bgp\+\_\+prefix. 
 
-@detail NOTE\+: This function should only be called on a pointer previously returned by read\+\_\+bgp\+\_\+prefix This function takes a double pointer so that it can free the inner pointer and set it to NULL
+NOTE\+: This function should only be called on a pointer previously returned by read\+\_\+bgp\+\_\+prefix This function takes a double pointer so that it can free the inner pointer and set it to NULL
 
 
 \begin{DoxyParams}[1]{Parameters}
@@ -88,7 +88,7 @@ Frees the Pointer returned by a previous successful call to read\+\_\+bgp\+\_\+p
 
 Frees the Pointer returned by a previous successful call to mem\+\_\+to\+\_\+msg. 
 
-@detail NOTE\+: This function should only be called on a pointer previously returned by mem\+\_\+to\+\_\+msg This function takes a double pointer so that it can free the inner pointer and set it to NULL
+NOTE\+: This function should only be called on a pointer previously returned by mem\+\_\+to\+\_\+msg This function takes a double pointer so that it can free the inner pointer and set it to NULL
 
 
 \begin{DoxyParams}[1]{Parameters}
@@ -131,9 +131,9 @@ Here is the call graph for this function\+:
 
 
 
-This function is used to decode protobuf messages and message types @detail This function reads a maximum of 10 bytes of memory into an array, terminating when one byte does not have its high order bit set. It then reverses the array, and concatenates the byte array into a single 64 bit integer, using only the low order 7 bits of each byte in the array. The result is then shifted right by 3 to produce the message code and AND\textquotesingle{}d by 7 to get the high order bytes to find the message type NOTE\+: It is important that this function returns allocated memory, and the result must be free\textquotesingle{}d by the calling function to avoid memory leaks. 
+This function is used to decode protobuf messages and message types. 
 
-
+This function reads a maximum of 10 bytes of memory into an array, terminating when one byte does not have its high order bit set. It then reverses the array, and concatenates the byte array into a single 64 bit integer, using only the low order 7 bits of each byte in the array. The result is then shifted right by 3 to produce the message code and AND\textquotesingle{}d by 7 to get the high order bytes to find the message type NOTE\+: It is important that this function returns allocated memory, and the result must be free\textquotesingle{}d by the calling function to avoid memory leaks. 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em ptr} & A pointer to the memory containing the bytes requiring decode \\
 \hline
@@ -160,9 +160,9 @@ Here is the call graph for this function\+:
 Reads a BGP encoded prefix from an NLRI or withdraw message. 
 
 \begin{DoxySeeAlso}{See also}
-\mbox{\hyperlink{structbgp__ipv4__prefix}{bgp\+\_\+ipv4\+\_\+prefix}} @detail This function decodes compressed ipv4 prefix\textquotesingle{}s as contained in bgp update messages. The first byte in the message represents the CIDR mask (The number of bits in the prefix). If the CIDR is fully divisible by 8, then CIDR/8 bytes are copied into the prefix element. If CIDR is NOT fully divisible by 8 then (CIDR/8)+1 bytes are copied into the prefix element. The next pointer element is set using the input pointer + 1 byte for the CIDR and then X bytes for the prefix itself, where X is either CIDR/8 or (CIDR/8)+1 NOTE\+: This function returns a pointer that must be free\textquotesingle{}d by the caller to avoid memory leaks. This function only serves for demonstration purposes because this type of processing would normally be done inline in a BGP update function without the need of additional memory allocation. 
+\mbox{\hyperlink{structbgp__ipv4__prefix}{bgp\+\_\+ipv4\+\_\+prefix}}
 \end{DoxySeeAlso}
-
+This function decodes compressed ipv4 prefix\textquotesingle{}s as contained in bgp update messages. The first byte in the message represents the CIDR mask (The number of bits in the prefix). If the CIDR is fully divisible by 8, then CIDR/8 bytes are copied into the prefix element. If CIDR is NOT fully divisible by 8 then (CIDR/8)+1 bytes are copied into the prefix element. The next pointer element is set using the input pointer + 1 byte for the CIDR and then X bytes for the prefix itself, where X is either CIDR/8 or (CIDR/8)+1 NOTE\+: This function returns a pointer that must be free\textquotesingle{}d by the caller to avoid memory leaks. This function only serves for demonstration purposes because this type of processing would normally be done inline in a BGP update function without the need of additional memory allocation. 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em ptr} & A Pointer to the start of the compressed prefix \\
 \hline
@@ -175,9 +175,9 @@ Reads a BGP encoded prefix from an NLRI or withdraw message.
 
 
 
-This function reverses a 10 byte array @detail This function is used primarily for handling variable integer decodes VARINT\textquotesingle{}s are something used heavily in gbp file formats (Google protobuffers) NOTE\+: This function assumes that the input array is at least 10 bytes long and should the input array be less than 10 bytes this may cause unexpected behavior. 
+This function reverses a 10 byte array. 
 
-
+This function is used primarily for handling variable integer decodes VARINT\textquotesingle{}s are something used heavily in gbp file formats (Google protobuffers) NOTE\+: This function assumes that the input array is at least 10 bytes long and should the input array be less than 10 bytes this may cause unexpected behavior 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em bytes} & An array of bytes to be reversed. \\
 \hline
