Adding an accelerated avx512 function - Note this requires compiling with -DAVX512 -mavx512 to work

--- a/docs/latex/decode__helpers_8h.tex
+++ b/docs/latex/decode__helpers_8h.tex
@@ -21,9 +21,9 @@ This graph shows which files directly or indirectly include this file\+:
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structbgp__ipv4__prefix}{bgp\+\_\+ipv4\+\_\+prefix}}
-\item 
+\begin{DoxyCompactList}\small\item\em This structure contains a prefix (in network byte order) and a CIDR for the prefix. \end{DoxyCompactList}\item 
 struct \mbox{\hyperlink{structproto__msg}{proto\+\_\+msg}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em This structure contains elements used after decoding a protobuf string. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
