--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -184,6 +184,8 @@
 \input{structproto__msg}
 \input{structroute4tree}
 \chapter{File Documentation}
+\input{accelerations_8c}
+\input{accelerations_8h}
 \input{decode__helpers_8c}
 \input{decode__helpers_8h}
 \input{linked__list_8c}
