--- a/docs/latex/structproto__msg.tex
+++ b/docs/latex/structproto__msg.tex
@@ -2,6 +2,11 @@
 \label{structproto__msg}\index{proto\_msg@{proto\_msg}}
 
 
+This structure contains elements used after decoding a protobuf string.  
+
+
+
+
 {\ttfamily \#include $<$decode\+\_\+helpers.\+h$>$}
 
 \doxysubsection*{Data Fields}
@@ -14,6 +19,9 @@
 \+\_\+\+\_\+u64 \mbox{\hyperlink{structproto__msg_a5fcd5ac620034e80e52a7912ad77a3b7}{msg\+\_\+type}}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+This structure contains elements used after decoding a protobuf string. 
 
 \doxysubsection{Field Documentation}
 \mbox{\Hypertarget{structproto__msg_a7e5d84ea199797fb79ef2c343d6f7a27}\label{structproto__msg_a7e5d84ea199797fb79ef2c343d6f7a27}} 
