--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -1,5 +1,7 @@
 \doxysection{File List}
 Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
+\item\contentsline{section}{\mbox{\hyperlink{accelerations_8c}{accelerations.\+c}} }{\pageref{accelerations_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{accelerations_8h}{accelerations.\+h}} }{\pageref{accelerations_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{decode__helpers_8c}{decode\+\_\+helpers.\+c}} }{\pageref{decode__helpers_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{decode__helpers_8h}{decode\+\_\+helpers.\+h}} }{\pageref{decode__helpers_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{linked__list_8c}{linked\+\_\+list.\+c}} }{\pageref{linked__list_8c}}{}
