--- a/docs/latex/structbgp__ipv4__prefix.tex
+++ b/docs/latex/structbgp__ipv4__prefix.tex
@@ -2,6 +2,11 @@
 \label{structbgp__ipv4__prefix}\index{bgp\_ipv4\_prefix@{bgp\_ipv4\_prefix}}
 
 
+This structure contains a prefix (in network byte order) and a CIDR for the prefix.  
+
+
+
+
 {\ttfamily \#include $<$decode\+\_\+helpers.\+h$>$}
 
 \doxysubsection*{Data Fields}
@@ -14,6 +19,9 @@
 \+\_\+\+\_\+u8 $\ast$ \mbox{\hyperlink{structbgp__ipv4__prefix_a1ac60d49a4d90a359ad397ef35f245f8}{next}}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+This structure contains a prefix (in network byte order) and a CIDR for the prefix. 
 
 \doxysubsection{Field Documentation}
 \mbox{\Hypertarget{structbgp__ipv4__prefix_a1756bf4d8d23fc3d6eda338d0928e447}\label{structbgp__ipv4__prefix_a1756bf4d8d23fc3d6eda338d0928e447}} 
