Turned off doxygen preprocessing

--- a/docs/latex/accelerations_8c.tex
+++ b/docs/latex/accelerations_8c.tex
@@ -1,12 +1,16 @@
 \hypertarget{accelerations_8c}{}\doxysection{accelerations.\+c File Reference}
 \label{accelerations_8c}\index{accelerations.c@{accelerations.c}}
-{\ttfamily \#include $<$asm-\/generic/types.\+h$>$}\newline
-{\ttfamily \#include \char`\"{}accelerations.\+h\char`\"{}}\newline
-Include dependency graph for accelerations.\+c\+:
-\nopagebreak
-\begin{figure}[H]
-\begin{center}
-\leavevmode
-\includegraphics[width=240pt]{accelerations_8c__incl}
-\end{center}
-\end{figure}
+\doxysubsection*{Functions}
+\begin{DoxyCompactItemize}
+\item 
+int \mbox{\hyperlink{accelerations_8c_a68d1884ee1715aa5f013a296e81518db}{search\+\_\+array\+\_\+32}} (void $\ast$haystack, \+\_\+\+\_\+u64 offset, size\+\_\+t struct\+\_\+size, int array\+\_\+size, \+\_\+\+\_\+u32 needle)
+\end{DoxyCompactItemize}
+
+
+\doxysubsection{Function Documentation}
+\mbox{\Hypertarget{accelerations_8c_a68d1884ee1715aa5f013a296e81518db}\label{accelerations_8c_a68d1884ee1715aa5f013a296e81518db}} 
+\index{accelerations.c@{accelerations.c}!search\_array\_32@{search\_array\_32}}
+\index{search\_array\_32@{search\_array\_32}!accelerations.c@{accelerations.c}}
+\doxysubsubsection{\texorpdfstring{search\_array\_32()}{search\_array\_32()}}
+{\footnotesize\ttfamily int search\+\_\+array\+\_\+32 (\begin{DoxyParamCaption}\item[{void $\ast$}]{haystack,  }\item[{\+\_\+\+\_\+u64}]{offset,  }\item[{size\+\_\+t}]{struct\+\_\+size,  }\item[{int}]{array\+\_\+size,  }\item[{\+\_\+\+\_\+u32}]{needle }\end{DoxyParamCaption})}
+
