Rewrote the test code to test linked list insertion/retrieval correctly. free_tree4 is currently broken and being debugged

--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -2,5 +2,5 @@
 Here are the data structures with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{structbgp__ipv4__prefix}{bgp\+\_\+ipv4\+\_\+prefix}} \\*This structure contains a prefix (in network byte order) and a CIDR for the prefix }{\pageref{structbgp__ipv4__prefix}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structproto__msg}{proto\+\_\+msg}} \\*This structure contains elements used after decoding a protobuf string }{\pageref{structproto__msg}}{}
-\item\contentsline{section}{\mbox{\hyperlink{structroute4tree}{route4tree}} \\*The route4trie structure is used in the creation of a 32 bit binary tree }{\pageref{structroute4tree}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structroute4tree}{route4tree}} \\*The \mbox{\hyperlink{structroute4tree}{route4tree}} structure is used in the creation of a 32 bit binary tree }{\pageref{structroute4tree}}{}
 \end{DoxyCompactList}
