--- a/docs/latex/decode__helpers_8h.tex
+++ b/docs/latex/decode__helpers_8h.tex
@@ -98,8 +98,7 @@ this function gets a variable encoded 64 bit integer from a 7 byte encoded strin
 \begin{DoxyReturn}{Returns}
 The number of bytes used to encode the extracted varint 
 \end{DoxyReturn}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -124,8 +123,7 @@ This function reads a maximum of 10 bytes of memory into an array, terminating w
 \begin{DoxyReturn}{Returns}
 An allocated \mbox{\hyperlink{structproto__msg}{proto\+\_\+msg}} structure or NULL if allocation of memory fails 
 \end{DoxyReturn}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
