--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -6,4 +6,5 @@ Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{decode__helpers_8h}{decode\+\_\+helpers.\+h}} }{\pageref{decode__helpers_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{linked__list_8c}{linked\+\_\+list.\+c}} }{\pageref{linked__list_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{linked__list_8h}{linked\+\_\+list.\+h}} }{\pageref{linked__list_8h}}{}
+\item\contentsline{section}{tests/\mbox{\hyperlink{test__linked__list_8c}{test\+\_\+linked\+\_\+list.\+c}} }{\pageref{test__linked__list_8c}}{}
 \end{DoxyCompactList}
