--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -191,6 +191,7 @@
 \input{linked__list_8c}
 \input{linked__list_8h}
 \input{README_8md}
+\input{test__linked__list_8c}
 %--- End generated contents ---
 
 % Index
