--- a/docs/latex/structroute4tree.tex
+++ b/docs/latex/structroute4tree.tex
@@ -2,7 +2,7 @@
 \label{structroute4tree}\index{route4tree@{route4tree}}
 
 
-The route4trie structure is used in the creation of a 32 bit binary tree.  
+The \mbox{\hyperlink{structroute4tree}{route4tree}} structure is used in the creation of a 32 bit binary tree.  
 
 
 
@@ -11,8 +11,7 @@ The route4trie structure is used in the creation of a 32 bit binary tree.
 
 
 
-Collaboration diagram for route4tree\+:
-\nopagebreak
+Collaboration diagram for route4tree\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -33,7 +32,7 @@ void $\ast$ \mbox{\hyperlink{structroute4tree_a051f5eab0b8d55dd76f58164655a82e3}
 
 
 \doxysubsection{Detailed Description}
-The route4trie structure is used in the creation of a 32 bit binary tree. 
+The \mbox{\hyperlink{structroute4tree}{route4tree}} structure is used in the creation of a 32 bit binary tree. 
 
 \doxysubsection{Field Documentation}
 \mbox{\Hypertarget{structroute4tree_a051f5eab0b8d55dd76f58164655a82e3}\label{structroute4tree_a051f5eab0b8d55dd76f58164655a82e3}} 
