Updated test code and made minor changes to the code that frees up the tree

--- a/docs/latex/decode__helpers_8h.tex
+++ b/docs/latex/decode__helpers_8h.tex
@@ -20,7 +20,7 @@ struct \mbox{\hyperlink{structbgp__ipv4__prefix}{bgp\+\_\+ipv4\+\_\+prefix}} $\a
 \begin{DoxyCompactList}\small\item\em Reads a BGP encoded prefix from an NLRI or withdraw message. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{decode__helpers_8h_a0342ce388a9816dfda3296af947325d2}{free\+\_\+mem\+\_\+to\+\_\+msg}} (struct \mbox{\hyperlink{structproto__msg}{proto\+\_\+msg}} $\ast$$\ast$msg)
 \begin{DoxyCompactList}\small\item\em Frees the Pointer returned by a previous successful call to mem\+\_\+to\+\_\+msg. \end{DoxyCompactList}\item 
-\+\_\+\+\_\+u8 \mbox{\hyperlink{decode__helpers_8h_aaf62cf9fd7a378b8e7e6c5e11ef67975}{get\+\_\+var\+\_\+int}} (const u\+\_\+char $\ast$data, \+\_\+\+\_\+u64 $\ast$varint)
+\+\_\+\+\_\+u8 \mbox{\hyperlink{decode__helpers_8h_aaf62cf9fd7a378b8e7e6c5e11ef67975}{get\+\_\+var\+\_\+int}} (const u\+\_\+char $\ast$\mbox{\hyperlink{structdata}{data}}, \+\_\+\+\_\+u64 $\ast$varint)
 \begin{DoxyCompactList}\small\item\em this function gets a variable encoded 64 bit integer from a 7 byte encoded string of bytes. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{decode__helpers_8h_ae4726b692329de152e1e658be0d2afee}{free\+\_\+bgp\+\_\+prefix}} (struct \mbox{\hyperlink{structbgp__ipv4__prefix}{bgp\+\_\+ipv4\+\_\+prefix}} $\ast$$\ast$prefix)
 \begin{DoxyCompactList}\small\item\em Frees the Pointer returned by a previous successful call to read\+\_\+bgp\+\_\+prefix. \end{DoxyCompactList}\end{DoxyCompactItemize}
