--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -181,6 +181,7 @@
 \input{files}
 \chapter{Data Structure Documentation}
 \input{structbgp__ipv4__prefix}
+\input{structdata}
 \input{structproto__msg}
 \input{structroute4tree}
 \chapter{File Documentation}
