--- a/docs/latex/test__linked__list_8c.tex
+++ b/docs/latex/test__linked__list_8c.tex
@@ -1,5 +1,10 @@
 \hypertarget{test__linked__list_8c}{}\doxysection{tests/test\+\_\+linked\+\_\+list.c File Reference}
 \label{test__linked__list_8c}\index{tests/test\_linked\_list.c@{tests/test\_linked\_list.c}}
+\doxysubsection*{Data Structures}
+\begin{DoxyCompactItemize}
+\item 
+struct \mbox{\hyperlink{structdata}{data}}
+\end{DoxyCompactItemize}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
