--- a/docs/latex/linked__list_8h.tex
+++ b/docs/latex/linked__list_8h.tex
@@ -10,7 +10,7 @@ struct \mbox{\hyperlink{structroute4tree}{route4tree}}
 \item 
 struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{linked__list_8h_a8039c47f44e43b60d48281b765e115dd}{init\+\_\+tree4}} (void)
 \begin{DoxyCompactList}\small\item\em Initialize a binary tree head entry. \end{DoxyCompactList}\item 
-struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{linked__list_8h_a8d4559d6f415d3d1c357f6242ce3c8db}{insert\+\_\+tree4}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 addr, \+\_\+\+\_\+u8 cidr, void $\ast$data)
+struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{linked__list_8h_a8d4559d6f415d3d1c357f6242ce3c8db}{insert\+\_\+tree4}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 addr, \+\_\+\+\_\+u8 cidr, void $\ast$\mbox{\hyperlink{structdata}{data}})
 \begin{DoxyCompactList}\small\item\em This inserts an entry into a binary tree. \end{DoxyCompactList}\item 
 struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{linked__list_8h_afbb768f4a8298bf1c98458904170e83c}{lookup\+\_\+lpm}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 addr, \+\_\+\+\_\+u8 cidr)
 \begin{DoxyCompactList}\small\item\em This does a longest prefix match against the binary tree. \end{DoxyCompactList}\item 
@@ -18,16 +18,16 @@ struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{l
 \begin{DoxyCompactList}\small\item\em This does an exact match lookup against the tree. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{linked__list_8h_adcb6ddddd0010e932c2c8d7057cb6444}{remove\+\_\+node}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 address, \+\_\+\+\_\+u8 cidr)
 \begin{DoxyCompactList}\small\item\em This function removes a node from the tree. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{linked__list_8h_ad4f9f69d0fb743e4ed569c4749cc3702}{free\+\_\+tree4}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree)
+void \mbox{\hyperlink{linked__list_8h_ac7cb413164f2ed7b1c62f1840f1eae04}{free\+\_\+tree4}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$$\ast$tree)
 \begin{DoxyCompactList}\small\item\em Frees an entire 32-\/bit binary tree using post-\/order traversal. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Function Documentation}
-\mbox{\Hypertarget{linked__list_8h_ad4f9f69d0fb743e4ed569c4749cc3702}\label{linked__list_8h_ad4f9f69d0fb743e4ed569c4749cc3702}} 
+\mbox{\Hypertarget{linked__list_8h_ac7cb413164f2ed7b1c62f1840f1eae04}\label{linked__list_8h_ac7cb413164f2ed7b1c62f1840f1eae04}} 
 \index{linked\_list.h@{linked\_list.h}!free\_tree4@{free\_tree4}}
 \index{free\_tree4@{free\_tree4}!linked\_list.h@{linked\_list.h}}
 \doxysubsubsection{\texorpdfstring{free\_tree4()}{free\_tree4()}}
-{\footnotesize\ttfamily void free\+\_\+tree4 (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$}]{tree }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void free\+\_\+tree4 (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$$\ast$}]{tree }\end{DoxyParamCaption})}
 
 
 
@@ -46,7 +46,7 @@ After calling this function on the root of a tree, all memory associated with th
 
 
 \begin{DoxyParams}[1]{Parameters}
-\mbox{\texttt{ in}}  & {\em tree} & A pointer to the root of a 32-\/bit binary tree ({\ttfamily struct \mbox{\hyperlink{structroute4tree}{route4tree}}}) to be freed. If the pointer is NULL, the function does nothing. \\
+\mbox{\texttt{ in}}  & {\em tree} & A double pointer to the root of a 32-\/bit binary tree ({\ttfamily struct \mbox{\hyperlink{structroute4tree}{route4tree}}}) to be freed. If the inner pointer is NULL, the function does nothing. \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{linked__list_8h_a8039c47f44e43b60d48281b765e115dd}\label{linked__list_8h_a8039c47f44e43b60d48281b765e115dd}} 
